fix spacing on list

--- a/tools/public/styles.css
+++ b/tools/public/styles.css
@@ -1,10 +1,12 @@
 ul,
 ol {
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-  padding: 0;
+  padding: 1rem;
   margin: 0;
   font-family: 'Inter', sans serif;
   font-optical-sizing: auto;
